# rwh

./: readme.md
Prettify/: Prettify.cabal
Prettify/app/: Main.hs
Prettify/src/: Prettify.hs  PrettifyJson.hs
SimpleJson/: SimpleJson.cabal
SimpleJson/app/: Main.hs
SimpleJson/src/: PrintJson.hs  PutJson.hs  SimpleJson.hs
ch02/: exercises.hs
ch03/: data.hs
ch06/: readParser.hs
ch07/: handle.hs  intro.hs  pure_impure.hs
ch07/data/: input.txt  output.txt
ch08/: regex.hs  sumfile  sumfile.hs
ch10/: pnm.hs
ch11/: prettyCheck.hs  qc.hs
ch16/: parsec.hs
ch17/: ffi.hs
ch21/: sqlite.hs
ch24/: concurrent.hs  mvar.hs  paralell.hs
ch3/: exercises.hs
ch4/: cli.hs  exercises.hs  split.hs
ch5/: Json.hs
ch6/: eq.hs  jsonclass.hs  naiveeq.hs  showread.hs
ch7/: interact.hs  ioexample.hs
ch8/: checkelf.hs
ch9/: listdir.hs
