name:                Prettify
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PrettifyJson, SimpleJson, Prettify
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Prettify-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Prettify
  default-language:    Haskell2010
